# Check4U

./: README.md  build.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/example/tmankita/check4u/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/tmankita/check4u/: CSVWriter.java  ImportTemplateActivity.java  MainActivity.java  NewTemplateActivity.java  OneByOneActivity.java  ProblematicQuestionsActivity.java  alignToTemplate.java  detectBlackSquare.java  detectBubbles.java  detectDocument.java  detectDocumentHough.java  oneByOneOrSeries.java
app/src/main/java/com/example/tmankita/check4u/Activities/: MainActivity.java  NewTemplateActivity.java  ProblematicQuestionsActivity.java  TouchActivity.java  oneByOneOrSeries.java
app/src/main/java/com/example/tmankita/check4u/Camera/: CameraPreviewFocus.java  DrawingView.java  PreviewSurfaceView.java  TouchActivity.java
app/src/main/java/com/example/tmankita/check4u/Database/: Answer.java  Exam.java  FileUtils.java  Question.java  Student.java  StudentDataBase.java  Tamplate.java  Template.java
app/src/main/java/com/example/tmankita/check4u/Detectors/: TemplateMatching.java  alignToTemplate.java  detectBlackSquare.java  detectBubbles.java  detectDocument.java  detectDocumentHough.java
app/src/main/java/com/example/tmankita/check4u/Dropbox/: DownloadFileTask.java  DropBoxActivity.java  DropboxClientFactory.java  FileThumbnailRequestHandler.java  FilesActivity.java  FilesAdapter.java  GetCurrentAccountTask.java  ListFolderTask.java  PicassoClient.java  UploadFileTask.java  UriHelpers.java  UserDropBoxActivity.java
app/src/main/java/com/example/tmankita/check4u/Utils/: CSVIterator.java  CSVParser.java  CSVReader.java  CSVWriter.java  Compare2CSVTables.java  PDFParser.java  PDFUtils.java  ZipManager.java
app/src/main/res/drawable/: full_circle_to_highlight.xml  square_id_digits.xml  square_question.xml  square_right_answer.xml  square_wrong_answer.xml
app/src/main/res/layout/: activity_dropbox_user.xml  activity_files.xml  activity_import_template.xml  activity_main.xml  activity_new_template.xml  activity_one_by_one.xml  activity_onebyone_or_series.xml  activity_problematic_questions.xml  activity_series.xml  activity_touch.xml  layout_new_template.xml  square_answer_with_option.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/test/java/com/example/tmankita/check4u/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
